--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>
     <header>
-      <!-- Logo&Nav-->
-      <a href="/">WebStudio</a>
+      <!-- Logo&Nav&Contact-->
 
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="" target="_blank">Studio</a></li>
           <li><a href="" target="_blank">Portfolio</a></li>
@@ -19,7 +19,6 @@
         </ul>
       </nav>
 
-      <!--Contact-->
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:++110001111111">+11 (000) 111-11-11</a>
@@ -28,12 +27,15 @@
 
     <main>
       <!-- main space-->
-      <h1>Effective Solutions for Your Business</h1>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
 
-      <button type="button">Order Service</button>
+        <button type="button">Order Service</button>
+      </section>
 
       <!--our advantages -->
       <section>
+        <h2>Our Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -72,7 +74,7 @@
         <ul>
           <li>
             <img
-              src="images/mark.jpg"
+              src="./images/mark.jpg"
               alt="Mark Guerrero, product designer"
               width="264"
             />
@@ -82,7 +84,7 @@
 
           <li>
             <img
-              src="images/tom.jpg"
+              src="./images/tom.jpg"
               alt="Tom Ford, Frontend Developer "
               width="264"
             />
@@ -92,7 +94,7 @@
 
           <li>
             <img
-              src="images/camila.jpg"
+              src="./images/camila.jpg"
               alt="Camila Garcia, Marketing"
               width="264"
             />
@@ -102,7 +104,7 @@
 
           <li>
             <img
-              src="images/daniel.jpg"
+              src="./images/daniel.jpg"
               alt="Daniel Wilson, UI Designer"
               width="264"
             />
